fix z-index order,  infobox w/ conditional class

--- a/src/app/components/header/header-logo/header-logo.component.scss
+++ b/src/app/components/header/header-logo/header-logo.component.scss
@@ -4,4 +4,6 @@ h1 {
   font-family: map-get(d.$fonts, "gideon");
   font-size: 1.5em;
   text-shadow: .05em .05em 0em d.$black;
+
+  z-index: 1;
 }
