--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,33 +8,38 @@
   padding: 2vh;
   height: 100vh;
 
-  z-index: 1;
-
   &__mainInterface {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 
     overflow: hidden;
-    height: 96vh;
+    height: fit-content;
     width: 20em;
 
-    z-index: 1;
+    // z-index: 1;
 
     app-header-searchbar {
       margin: 0;
       width: 95%;
+
+      z-index: 1;
     }
 
     app-header-infobox {
       overflow: scroll;
       margin: 1vh 0 0 0;
+      height: 90vh;
       width: 95%;
-      height: 100%;
+    }
+
+    .app-header-infobox--visible {
+      z-index: 1;
     }
   }
 
   app-header-logo {
     z-index: 1;
+    height: fit-content;
   }
 }
